@@ -31,8 +31,8 @@ export("Adobe_glyphs", "HTMLheader", "Rd2HTML", "Rd2ex", "Rd2latex",
        "compactPDF", "delimMatch", "deparseLatex", "dependsOnPkgs",
        "encoded_text_to_latex", "file_ext", "file_path_as_absolute",
        "file_path_sans_ext", "findHTMLlinks", "getBibstyle",
-       "getDepList", "installFoundDepends", "latexToUtf8",
-       "list_files_with_exts", "list_files_with_type",
+       "getDepList", "getVignetteInfo", "installFoundDepends",
+       "latexToUtf8", "list_files_with_exts", "list_files_with_type",
        "make_translations_pkg", "md5sum", "package.dependencies",
        "package_dependencies", "parseLatex", "parse_Rd", "pkgDepends",
        "pkgVignettes", "pskill", "psnice", "read.00Index", "readNEWS",
@@ -40,7 +40,7 @@ export("Adobe_glyphs", "HTMLheader", "Rd2HTML", "Rd2ex", "Rd2latex",
        "startDynamicHelp", "testInstalledBasic",
        "testInstalledPackage", "testInstalledPackages", "texi2dvi",
        "texi2pdf", "toHTML", "toRd", "undoc", "update_pkg_po",
-       "vignetteDepends", "vignetteEngine", "write_PACKAGES", 
+       "vignetteDepends", "vignetteEngine", "write_PACKAGES",
        "xgettext", "xgettext2pot", "xngettext")
 
 export("check_packages_in_dir",
